--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -46,7 +46,7 @@ nav {
   }
   
   .dropdown-menu li a:hover {
-    color: #2190ff;
+    color: #3685fb;
   }
   .nav__logo {
     font-size: 2rem;
@@ -158,4 +158,3 @@ nav {
     background-color: #3685fb;
     color: white;
   }
-  
